Revision history for {{$dist->name}}

{{$NEXT}}
  - Remove dep on Inport for :short tag

0.03      2018-05-22 13:19:13 -0400
  - documentation fixes

0.02      2018-05-18 15:43:19 -0400
  - internal release
  - Add http_headers [headers]
  - Add http_Header [head]

0.01      2018-05-13 13:38:52 -0400
  - initial version