@@ -75,7 +75,7 @@ subtest 'x' => sub {
         field 'X-Foo' => 'Bar';
         etc;
       };
-      head 'x-foo' => 'Bar';
+      header 'x-foo' => 'Bar';
     }
   );
   
