@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Remove dep on Inport for :short tag
+  - Rename short name for http_header from head to header
+    (in case we want to add a HTTP HEAD method later)
 
 0.03      2018-05-22 13:19:13 -0400
   - documentation fixes
